--- a/VRChat/08/1177208.html
+++ b/VRChat/08/1177208.html
@@ -71,9 +71,6 @@
     <script id="shoplist_with_items" type="text/x-template">
     <div><div class="l-cards-4cols l-cards-sp-2cols"><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" v-for="shop in visibleShops"></shop-with-items><shop-with-items :ga-params="gaParams" :key="shop.subdomain" :shop="shop" closed="" v-for="shop in moreShops" v-if="moreShops &amp;&amp; moreShopsVisible"></shop-with-items></div><div @click="moreShopsVisible = true" class="ellip-btn" v-if="moreShops &amp;&amp; !moreShopsVisible">もっと見る<i class="icon-arrow-open-down s-2x no-margin"></i></div></div>
     </script>
-    <style type="text/css">
-    .eventname-flag--inner {   margin-right: 6px; }  .eventname-flag--inner.eventname-flag--exhibition-open {   margin-right: 0px; }
-    </style>
   </head>
   <body>
     <div class="mini-player-controller" style="display: none;">
@@ -103,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "bx1aXZg6jZORL2TRTvIH+Wqcp6ebCBRI3Tx06U8zHis="></script>
+    "Y/2+wMg/XDXAA4NFFUb1PQ7kCANJvqtDRja86IDHSV8="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"Whisper Ability β: VRChat上で囁けるようになるアビリティ","description":"(2019/03/26追記)\nよしたかさんがアプリ版を作ってくださりました。\nステレオミキサーの複雑な設定無しに同等の機能を発揮することができます。\nhttps://tyounanmoti.booth.pm/items/1274926\n\nVRChatで話す皆さんの声には、喋っていないときは出力を0にする「ノイズゲート」がかかっています。\nこのデータには、20Hz未満程度のサイン波が収録されています。\nこれは、「耳には聞こえないけどVRChatが喋っていると誤認する」音です。\nこの音をVRChatのマイク入力として声と一緒に入力すると、ノイズゲートを無効にして喋ることができます。\n楽器演奏時などに、音が少しずつ減衰していって急に途切れる、といった現象の対策になります。\n\n・注意\n本データはβ版です。環境によっては意図せぬノイズが発音される可能性があります。\nまた、20Hz以下を再生できてしまうウーファーを使用しているユーザーの家を揺らす可能性があります。\n\n・対象者\n仮想ステレオミキサー(VoiceMeeter Bananaなど)の使い方がわかるVRChatユーザ\n\n・使い方\n1.オーディオプレイヤーで本データをリピート再生します。\n2.ステレオミキサーでマイクとオーディオプレイヤーの出力先をVRChatのマイク入力に設定します。\n3.喋っていないときもVRChat画面左下のマイクアイコンが表示され続けていれば成功です。","url":"https://booth.pm/ja/items/1177208","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/d0f38e59-fab5-4e19-a0d4-19759df07943/i/1177208/80650c47-36a1-4c94-83ed-3cf73bd3c810_base_resized.jpg"}
     </script>
@@ -116,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="bx1aXZg6jZORL2TRTvIH+Wqcp6ebCBRI3Tx06U8zHis="></script>
+    nonce="Y/2+wMg/XDXAA4NFFUb1PQ7kCANJvqtDRja86IDHSV8="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -143,6 +140,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -157,7 +156,8 @@
                             "empty:hidden flex gap-4 items-center">
                               <div class="flex min-w-0">
                                 <div class="eventname-flag">
-                                  <a class="eventname-flag--inner"
+                                  <a class=
+                                  "eventname-flag--inner mr-[6px]"
                                   data-tracking="click"
                                   data-product-list=
                                   "from market_show via eventname_flag to event_index"
@@ -199,7 +199,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1177208/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               409
@@ -214,14 +214,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1177208/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               409
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
