--- a/VRChat/44/1159144.html
+++ b/VRChat/44/1159144.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "yUu+scyEm+JHrb9YiBGX0nB+fqhXQbM8yzyuFTE5qrI="></script>
+    "lj/h+M5PEhcOfzsTDFYhs9HOnXwEBhYkAfN4wRFF5eQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"AS_SIG-03＋WEAPON","description":"フルトラテスト済み\n\n\n※利用規約※\n\n営利利用:可\n【ゲーム, 映像作品, 動画配信等にご利用いただけます】\n\n改変:可\n【モデルを含めた当データの改変は自由です】\n\n再配布:禁止\n【テクスチャ、モデルともに他者への二次配布を禁止します】\n\nVRCでのペデスタル化：禁止\n【クローン可能アバターでの使用、アバターペデスタルでの設置を禁止します】\n\n最後に：\n【公序良俗に違反、他者への誹謗中傷、政治および宗教的な理由での利用を禁止します】","url":"https://booth.pm/ja/items/1159144","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"200","highPrice":"1000"},"image":"https://booth.pximg.net/c/620x620/370bd2d8-e720-4d70-a153-03e2d3872e42/i/1159144/0e737987-77d3-4e55-9910-093438e62c32_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="yUu+scyEm+JHrb9YiBGX0nB+fqhXQbM8yzyuFTE5qrI="></script>
+    nonce="lj/h+M5PEhcOfzsTDFYhs9HOnXwEBhYkAfN4wRFF5eQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -158,7 +160,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1159144/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               83
@@ -173,14 +175,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1159144/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               83
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
